Kaggle Notebook | mcts-lightgbm | Version 9

--- a/kaggle/mcts-lightgbm.ipynb
+++ b/kaggle/mcts-lightgbm.ipynb
@@ -3,21 +3,21 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "b25779c4",
+   "id": "fada36e7",
    "metadata": {
     "_cell_guid": "b1076dfc-b9ad-4769-8c92-a6c4dae69d19",
     "_uuid": "8f2839f25d086af736a60e9eeb907d3b93b6e0e5",
     "execution": {
-     "iopub.execute_input": "2024-11-28T23:48:16.106030Z",
-     "iopub.status.busy": "2024-11-28T23:48:16.105521Z",
-     "iopub.status.idle": "2024-11-28T23:48:20.924602Z",
-     "shell.execute_reply": "2024-11-28T23:48:20.923037Z"
+     "iopub.execute_input": "2024-11-28T23:52:20.379035Z",
+     "iopub.status.busy": "2024-11-28T23:52:20.378615Z",
+     "iopub.status.idle": "2024-11-28T23:52:24.294268Z",
+     "shell.execute_reply": "2024-11-28T23:52:24.293407Z"
     },
     "papermill": {
-     "duration": 4.826976,
-     "end_time": "2024-11-28T23:48:20.927744",
+     "duration": 3.922415,
+     "end_time": "2024-11-28T23:52:24.296566",
      "exception": false,
-     "start_time": "2024-11-28T23:48:16.100768",
+     "start_time": "2024-11-28T23:52:20.374151",
      "status": "completed"
     },
     "tags": []
@@ -51,13 +51,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f2fb0d64",
+   "id": "850d6f55",
    "metadata": {
     "papermill": {
-     "duration": 0.002375,
-     "end_time": "2024-11-28T23:48:20.933199",
+     "duration": 0.002244,
+     "end_time": "2024-11-28T23:52:24.301791",
      "exception": false,
-     "start_time": "2024-11-28T23:48:20.930824",
+     "start_time": "2024-11-28T23:52:24.299547",
      "status": "completed"
     },
     "tags": []
@@ -70,19 +70,19 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "7cfa076b",
+   "id": "ded2bb70",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-11-28T23:48:20.940470Z",
-     "iopub.status.busy": "2024-11-28T23:48:20.939847Z",
-     "iopub.status.idle": "2024-11-28T23:48:27.895125Z",
-     "shell.execute_reply": "2024-11-28T23:48:27.893461Z"
+     "iopub.execute_input": "2024-11-28T23:52:24.308214Z",
+     "iopub.status.busy": "2024-11-28T23:52:24.307642Z",
+     "iopub.status.idle": "2024-11-28T23:52:42.318505Z",
+     "shell.execute_reply": "2024-11-28T23:52:42.316977Z"
     },
     "papermill": {
-     "duration": 6.963448,
-     "end_time": "2024-11-28T23:48:27.899219",
+     "duration": 18.016643,
+     "end_time": "2024-11-28T23:52:42.320786",
      "exception": false,
-     "start_time": "2024-11-28T23:48:20.935771",
+     "start_time": "2024-11-28T23:52:24.304143",
      "status": "completed"
     },
     "tags": []
@@ -93,6 +93,9 @@
      "output_type": "stream",
      "text": [
       "/opt/conda/lib/python3.10/site-packages/sklearn/base.py:318: UserWarning: Trying to unpickle estimator OrdinalEncoder from version 1.5.2 when using version 1.2.2. This might lead to breaking code or invalid results. Use at your own risk. For more info please refer to:\n",
+      "https://scikit-learn.org/stable/model_persistence.html#security-maintainability-limitations\n",
+      "  warnings.warn(\n",
+      "/opt/conda/lib/python3.10/site-packages/sklearn/base.py:318: UserWarning: Trying to unpickle estimator MinMaxScaler from version 1.5.2 when using version 1.2.2. This might lead to breaking code or invalid results. Use at your own risk. For more info please refer to:\n",
       "https://scikit-learn.org/stable/model_persistence.html#security-maintainability-limitations\n",
       "  warnings.warn(\n"
      ]
@@ -110,7 +113,8 @@
    ],
    "source": [
     "# Specify the path where you want to save the serialized function\n",
-    "lightgbm_artifacts_path = '/kaggle/input/mcts-artifacts/lightgbm_predict_uni80.pkl'\n",
+    "# lightgbm_artifacts_path = '/kaggle/input/mcts-artifacts/lightgbm_predict_uni80.pkl'\n",
+    "lightgbm_artifacts_path = '/kaggle/input/mcts-artifacts/lightgbm_linear_predict_uni95.pkl'\n",
     "\n",
     "# Load the function from the file\n",
     "with open(lightgbm_artifacts_path, 'rb') as f:\n",
@@ -122,19 +126,19 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "d73f52d8",
+   "id": "be3e11f4",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-11-28T23:48:27.908735Z",
-     "iopub.status.busy": "2024-11-28T23:48:27.908323Z",
-     "iopub.status.idle": "2024-11-28T23:48:27.921703Z",
-     "shell.execute_reply": "2024-11-28T23:48:27.920138Z"
+     "iopub.execute_input": "2024-11-28T23:52:42.327891Z",
+     "iopub.status.busy": "2024-11-28T23:52:42.327498Z",
+     "iopub.status.idle": "2024-11-28T23:52:42.338172Z",
+     "shell.execute_reply": "2024-11-28T23:52:42.336928Z"
     },
     "papermill": {
-     "duration": 0.023513,
-     "end_time": "2024-11-28T23:48:27.925839",
+     "duration": 0.016693,
+     "end_time": "2024-11-28T23:52:42.340277",
      "exception": false,
-     "start_time": "2024-11-28T23:48:27.902326",
+     "start_time": "2024-11-28T23:52:42.323584",
      "status": "completed"
     },
     "tags": []
@@ -144,8 +148,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "len(numerical_cols): 287\n",
-      "len(categorical_cols): 8\n"
+      "len(numerical_cols): 468\n",
+      "len(categorical_cols): 10\n"
      ]
     }
    ],
@@ -218,19 +222,19 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "c97e6f3f",
+   "id": "a4f03e1e",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-11-28T23:48:27.936022Z",
-     "iopub.status.busy": "2024-11-28T23:48:27.935581Z",
-     "iopub.status.idle": "2024-11-28T23:48:28.551820Z",
-     "shell.execute_reply": "2024-11-28T23:48:28.550127Z"
+     "iopub.execute_input": "2024-11-28T23:52:42.348131Z",
+     "iopub.status.busy": "2024-11-28T23:52:42.347022Z",
+     "iopub.status.idle": "2024-11-28T23:52:43.022894Z",
+     "shell.execute_reply": "2024-11-28T23:52:43.021860Z"
     },
     "papermill": {
-     "duration": 0.624446,
-     "end_time": "2024-11-28T23:48:28.554452",
+     "duration": 0.681949,
+     "end_time": "2024-11-28T23:52:43.025065",
      "exception": false,
-     "start_time": "2024-11-28T23:48:27.930006",
+     "start_time": "2024-11-28T23:52:42.343116",
      "status": "completed"
     },
     "tags": []
@@ -246,7 +250,7 @@
        "  white-space: pre-wrap;\n",
        "}\n",
        "</style>\n",
-       "<small>shape: (3, 2)</small><table border=\"1\" class=\"dataframe\"><thead><tr><th>Id</th><th>utility_agent1</th></tr><tr><td>i64</td><td>f64</td></tr></thead><tbody><tr><td>233234</td><td>0.121428</td></tr><tr><td>233235</td><td>-0.156919</td></tr><tr><td>233236</td><td>-0.054666</td></tr></tbody></table></div>"
+       "<small>shape: (3, 2)</small><table border=\"1\" class=\"dataframe\"><thead><tr><th>Id</th><th>utility_agent1</th></tr><tr><td>i64</td><td>f64</td></tr></thead><tbody><tr><td>233234</td><td>0.149463</td></tr><tr><td>233235</td><td>-0.199594</td></tr><tr><td>233236</td><td>0.004744</td></tr></tbody></table></div>"
       ],
       "text/plain": [
        "shape: (3, 2)\n",
@@ -255,9 +259,9 @@
        "│ ---    ┆ ---            │\n",
        "│ i64    ┆ f64            │\n",
        "╞════════╪════════════════╡\n",
-       "│ 233234 ┆ 0.121428       │\n",
-       "│ 233235 ┆ -0.156919      │\n",
-       "│ 233236 ┆ -0.054666      │\n",
+       "│ 233234 ┆ 0.149463       │\n",
+       "│ 233235 ┆ -0.199594      │\n",
+       "│ 233236 ┆ 0.004744       │\n",
        "└────────┴────────────────┘"
       ]
      },
@@ -275,13 +279,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "eea212f2",
+   "id": "e7e38f39",
    "metadata": {
     "papermill": {
-     "duration": 0.002752,
-     "end_time": "2024-11-28T23:48:28.560419",
+     "duration": 0.002677,
+     "end_time": "2024-11-28T23:52:43.030727",
      "exception": false,
-     "start_time": "2024-11-28T23:48:28.557667",
+     "start_time": "2024-11-28T23:52:43.028050",
      "status": "completed"
     },
     "tags": []
@@ -294,19 +298,19 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "4f1dcebc",
+   "id": "c3632829",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-11-28T23:48:28.569220Z",
-     "iopub.status.busy": "2024-11-28T23:48:28.568760Z",
-     "iopub.status.idle": "2024-11-28T23:48:29.133492Z",
-     "shell.execute_reply": "2024-11-28T23:48:29.131404Z"
+     "iopub.execute_input": "2024-11-28T23:52:43.037894Z",
+     "iopub.status.busy": "2024-11-28T23:52:43.037488Z",
+     "iopub.status.idle": "2024-11-28T23:52:43.789609Z",
+     "shell.execute_reply": "2024-11-28T23:52:43.788519Z"
     },
     "papermill": {
-     "duration": 0.57216,
-     "end_time": "2024-11-28T23:48:29.136201",
+     "duration": 0.758398,
+     "end_time": "2024-11-28T23:52:43.791953",
      "exception": false,
-     "start_time": "2024-11-28T23:48:28.564041",
+     "start_time": "2024-11-28T23:52:43.033555",
      "status": "completed"
     },
     "tags": []
@@ -328,13 +332,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ad445d49",
+   "id": "b31089ca",
    "metadata": {
     "papermill": {
-     "duration": 0.00289,
-     "end_time": "2024-11-28T23:48:29.143374",
+     "duration": 0.002684,
+     "end_time": "2024-11-28T23:52:43.797846",
      "exception": false,
-     "start_time": "2024-11-28T23:48:29.140484",
+     "start_time": "2024-11-28T23:52:43.795162",
      "status": "completed"
     },
     "tags": []
@@ -384,14 +388,14 @@
   },
   "papermill": {
    "default_parameters": {},
-   "duration": 17.490627,
-   "end_time": "2024-11-28T23:48:30.274438",
+   "duration": 27.637088,
+   "end_time": "2024-11-28T23:52:45.227593",
    "environment_variables": {},
    "exception": null,
    "input_path": "__notebook__.ipynb",
    "output_path": "__notebook__.ipynb",
    "parameters": {},
-   "start_time": "2024-11-28T23:48:12.783811",
+   "start_time": "2024-11-28T23:52:17.590505",
    "version": "2.6.0"
   }
  },
