--- a/train/catboost.ipynb
+++ b/train/catboost.ipynb
@@ -376,9 +376,9 @@
     "    params = {\n",
     "\n",
     "        'objective': \"RMSE\",\n",
-    "        'learning_rate': 0.1,\n",
+    "        'learning_rate': 0.02,\n",
     "        'depth': 10,\n",
-    "        'iterations': 3000,\n",
+    "        'iterations': 10_000,\n",
     "        'eval_metric': 'RMSE',\n",
     "        'verbose': 0,\n",
     "        'random_seed': 2112,\n",
