--- a/train/nn-gandalf.ipynb
+++ b/train/nn-gandalf.ipynb
@@ -109,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
     "tags": [
      "parameters"
@@ -175,6 +175,7 @@
     "df_train, numerical_cols, categorical_cols, encoder, scaler = process_train_data(\n",
     "    df_train,\n",
     "    scale=True,\n",
+    "    scale_type='minmax',\n",
     "    numerical_cols=numerical_cols,\n",
     "    categorical_cols=categorical_cols,\n",
     "    include_position_features=False,\n",
@@ -211,7 +212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -234,7 +235,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -441,7 +442,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -455,9 +456,8 @@
     "    'learnable_sparsity': True,\n",
     "    'n_stages': 1,\n",
     "\n",
-    "    'learning_rate': 1e-2,\n",
-    "    # 'weight_decay': 1e-4,\n",
-    "    'weight_decay': 0.0,\n",
+    "    'learning_rate': 5e-3,\n",
+    "    'weight_decay': 1e-5,\n",
     "    'pct_start': 0.05,\n",
     "    'div_factor': 100.0,\n",
     "    'final_div_factor': 1.\n",
@@ -466,7 +466,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -511,17 +511,24 @@
     "            num_cols=numerical_cols,\n",
     "            cat_cols=categorical_cols,\n",
     "            task='regression',\n",
+    "            n_estimators=100,\n",
     "            num_leaves=127,\n",
+    "            random_state=2112,\n",
+    "            verbosity=-1,\n",
     "        )\n",
     "        lgbm_encoder.fit(X_train, y_train)\n",
-    "        X_train_leaves_lgbm = lgbm_encoder.transform(X_train)\n",
+    "        X_train_leaves_lgbm = lgbm_encoder.transform(X_train, verbose=True)\n",
     "        X_valid_leaves_lgbm = lgbm_encoder.transform(X_valid)\n",
     "        \n",
     "        X_train = pd.concat([X_train, X_train_leaves_lgbm], axis=1)\n",
     "        X_valid = pd.concat([X_valid, X_valid_leaves_lgbm], axis=1) \n",
     "\n",
-    "        _categorical_cols = categorical_cols + lgbm_encoder.new_columns\n",
-    "        _cat_input_dims = X_train[_categorical_cols].nunique(axis=0).values.tolist()\n",
+    "        _categorical_cols = (\n",
+    "            categorical_cols + lgbm_encoder.new_columns\n",
+    "        )\n",
+    "        _cat_input_dims = (\n",
+    "            df_train[categorical_cols].nunique(axis=0).values.tolist() + [127]*len(lgbm_encoder.new_columns)\n",
+    "        )\n",
     "\n",
     "        lgbm_encoders.append(lgbm_encoder)\n",
     "\n",
@@ -770,10 +777,7 @@
     "            test_processed[numerical_cols+categorical_cols]\n",
     "        )\n",
     "        X_test_cat = pd.concat([X_test_cat, lgbm_features], axis=1)\n",
-    "\n",
-    "        _categorical_cols = (\n",
-    "            categorical_cols + lgbm_encoder.new_columns\n",
-    "        )\n",
+    "        _categorical_cols = categorical_cols + lgbm_encoder.new_columns\n",
     "\n",
     "        model.eval()\n",
     "        with torch.no_grad():\n",
