Kaggle Notebook | mcts-catboost | Version 30

--- a/kaggle/mcts-catboost.ipynb
+++ b/kaggle/mcts-catboost.ipynb
@@ -3,21 +3,21 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "3d36810a",
+   "id": "b73773fc",
    "metadata": {
     "_cell_guid": "b1076dfc-b9ad-4769-8c92-a6c4dae69d19",
     "_uuid": "8f2839f25d086af736a60e9eeb907d3b93b6e0e5",
     "execution": {
-     "iopub.execute_input": "2024-11-28T23:50:40.225684Z",
-     "iopub.status.busy": "2024-11-28T23:50:40.224949Z",
-     "iopub.status.idle": "2024-11-28T23:50:43.924153Z",
-     "shell.execute_reply": "2024-11-28T23:50:43.922953Z"
+     "iopub.execute_input": "2024-11-29T06:49:15.449369Z",
+     "iopub.status.busy": "2024-11-29T06:49:15.448955Z",
+     "iopub.status.idle": "2024-11-29T06:49:20.178473Z",
+     "shell.execute_reply": "2024-11-29T06:49:20.177218Z"
     },
     "papermill": {
-     "duration": 3.706588,
-     "end_time": "2024-11-28T23:50:43.926669",
+     "duration": 4.737356,
+     "end_time": "2024-11-29T06:49:20.181509",
      "exception": false,
-     "start_time": "2024-11-28T23:50:40.220081",
+     "start_time": "2024-11-29T06:49:15.444153",
      "status": "completed"
     },
     "tags": []
@@ -51,13 +51,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "72404451",
+   "id": "b83930c6",
    "metadata": {
     "papermill": {
-     "duration": 0.00232,
-     "end_time": "2024-11-28T23:50:43.931935",
+     "duration": 0.002438,
+     "end_time": "2024-11-29T06:49:20.187086",
      "exception": false,
-     "start_time": "2024-11-28T23:50:43.929615",
+     "start_time": "2024-11-29T06:49:20.184648",
      "status": "completed"
     },
     "tags": []
@@ -70,19 +70,19 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "c8def9d3",
+   "id": "e8cd8c06",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-11-28T23:50:43.938572Z",
-     "iopub.status.busy": "2024-11-28T23:50:43.938023Z",
-     "iopub.status.idle": "2024-11-28T23:50:48.297660Z",
-     "shell.execute_reply": "2024-11-28T23:50:48.296048Z"
+     "iopub.execute_input": "2024-11-29T06:49:20.194485Z",
+     "iopub.status.busy": "2024-11-29T06:49:20.193955Z",
+     "iopub.status.idle": "2024-11-29T06:49:25.596037Z",
+     "shell.execute_reply": "2024-11-29T06:49:25.595074Z"
     },
     "papermill": {
-     "duration": 4.365579,
-     "end_time": "2024-11-28T23:50:48.299989",
+     "duration": 5.409744,
+     "end_time": "2024-11-29T06:49:25.599440",
      "exception": false,
-     "start_time": "2024-11-28T23:50:43.934410",
+     "start_time": "2024-11-29T06:49:20.189696",
      "status": "completed"
     },
     "tags": []
@@ -115,7 +115,8 @@
     "# catboost_artifacts_path = '/kaggle/input/mcts-artifacts/catboost_predict_fsv2.pkl'\n",
     "# catboost_artifacts_path = '/kaggle/input/mcts-artifacts/catboost_predict_fsv23.pkl'\n",
     "# catboost_artifacts_path = '/kaggle/input/mcts-artifacts/catboost_predict_fsv34.pkl'\n",
-    "catboost_artifacts_path = '/kaggle/input/mcts-artifacts/catboost_text_predict_uni90.pkl'\n",
+    "# catboost_artifacts_path = '/kaggle/input/mcts-artifacts/catboost_text_predict_uni90.pkl'\n",
+    "catboost_artifacts_path = '//kaggle/input/mcts-artifacts/catboost_predict_int95.pkl'\n",
     "\n",
     "# Load the function from the file\n",
     "with open(catboost_artifacts_path, 'rb') as f:\n",
@@ -127,19 +128,19 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "36820be6",
+   "id": "04ac0e10",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-11-28T23:50:48.308132Z",
-     "iopub.status.busy": "2024-11-28T23:50:48.307692Z",
-     "iopub.status.idle": "2024-11-28T23:50:48.320416Z",
-     "shell.execute_reply": "2024-11-28T23:50:48.319186Z"
+     "iopub.execute_input": "2024-11-29T06:49:25.608490Z",
+     "iopub.status.busy": "2024-11-29T06:49:25.608125Z",
+     "iopub.status.idle": "2024-11-29T06:49:25.621308Z",
+     "shell.execute_reply": "2024-11-29T06:49:25.619996Z"
     },
     "papermill": {
-     "duration": 0.021172,
-     "end_time": "2024-11-28T23:50:48.324069",
+     "duration": 0.019579,
+     "end_time": "2024-11-29T06:49:25.623663",
      "exception": false,
-     "start_time": "2024-11-28T23:50:48.302897",
+     "start_time": "2024-11-29T06:49:25.604084",
      "status": "completed"
     },
     "tags": []
@@ -149,8 +150,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "len(numerical_cols): 398\n",
-      "len(categorical_cols): 10\n"
+      "len(numerical_cols): 207\n",
+      "len(categorical_cols): 6\n"
      ]
     }
    ],
@@ -252,19 +253,19 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "16932402",
+   "id": "147f71c6",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-11-28T23:50:48.331691Z",
-     "iopub.status.busy": "2024-11-28T23:50:48.331316Z",
-     "iopub.status.idle": "2024-11-28T23:50:48.835547Z",
-     "shell.execute_reply": "2024-11-28T23:50:48.834412Z"
+     "iopub.execute_input": "2024-11-29T06:49:25.631234Z",
+     "iopub.status.busy": "2024-11-29T06:49:25.630835Z",
+     "iopub.status.idle": "2024-11-29T06:49:26.142216Z",
+     "shell.execute_reply": "2024-11-29T06:49:26.141047Z"
     },
     "papermill": {
-     "duration": 0.510862,
-     "end_time": "2024-11-28T23:50:48.838063",
+     "duration": 0.517972,
+     "end_time": "2024-11-29T06:49:26.144572",
      "exception": false,
-     "start_time": "2024-11-28T23:50:48.327201",
+     "start_time": "2024-11-29T06:49:25.626600",
      "status": "completed"
     },
     "tags": []
@@ -280,7 +281,7 @@
        "  white-space: pre-wrap;\n",
        "}\n",
        "</style>\n",
-       "<small>shape: (3, 2)</small><table border=\"1\" class=\"dataframe\"><thead><tr><th>Id</th><th>utility_agent1</th></tr><tr><td>i64</td><td>f64</td></tr></thead><tbody><tr><td>233234</td><td>0.150607</td></tr><tr><td>233235</td><td>-0.163806</td></tr><tr><td>233236</td><td>0.03955</td></tr></tbody></table></div>"
+       "<small>shape: (3, 2)</small><table border=\"1\" class=\"dataframe\"><thead><tr><th>Id</th><th>utility_agent1</th></tr><tr><td>i64</td><td>f64</td></tr></thead><tbody><tr><td>233234</td><td>0.15394</td></tr><tr><td>233235</td><td>-0.169385</td></tr><tr><td>233236</td><td>0.000275</td></tr></tbody></table></div>"
       ],
       "text/plain": [
        "shape: (3, 2)\n",
@@ -289,9 +290,9 @@
        "│ ---    ┆ ---            │\n",
        "│ i64    ┆ f64            │\n",
        "╞════════╪════════════════╡\n",
-       "│ 233234 ┆ 0.150607       │\n",
-       "│ 233235 ┆ -0.163806      │\n",
-       "│ 233236 ┆ 0.03955        │\n",
+       "│ 233234 ┆ 0.15394        │\n",
+       "│ 233235 ┆ -0.169385      │\n",
+       "│ 233236 ┆ 0.000275       │\n",
        "└────────┴────────────────┘"
       ]
      },
@@ -309,13 +310,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "45598fcc",
+   "id": "d99e1603",
    "metadata": {
     "papermill": {
-     "duration": 0.002769,
-     "end_time": "2024-11-28T23:50:48.844246",
+     "duration": 0.003267,
+     "end_time": "2024-11-29T06:49:26.150991",
      "exception": false,
-     "start_time": "2024-11-28T23:50:48.841477",
+     "start_time": "2024-11-29T06:49:26.147724",
      "status": "completed"
     },
     "tags": []
@@ -328,19 +329,19 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "b5b5212e",
+   "id": "86f7ffc5",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-11-28T23:50:48.852077Z",
-     "iopub.status.busy": "2024-11-28T23:50:48.851652Z",
-     "iopub.status.idle": "2024-11-28T23:50:49.383501Z",
-     "shell.execute_reply": "2024-11-28T23:50:49.382300Z"
+     "iopub.execute_input": "2024-11-29T06:49:26.158840Z",
+     "iopub.status.busy": "2024-11-29T06:49:26.158441Z",
+     "iopub.status.idle": "2024-11-29T06:49:26.633273Z",
+     "shell.execute_reply": "2024-11-29T06:49:26.632245Z"
     },
     "papermill": {
-     "duration": 0.538755,
-     "end_time": "2024-11-28T23:50:49.386114",
+     "duration": 0.481839,
+     "end_time": "2024-11-29T06:49:26.635900",
      "exception": false,
-     "start_time": "2024-11-28T23:50:48.847359",
+     "start_time": "2024-11-29T06:49:26.154061",
      "status": "completed"
     },
     "tags": []
@@ -362,13 +363,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2df9d517",
+   "id": "6455cd7f",
    "metadata": {
     "papermill": {
-     "duration": 0.003016,
-     "end_time": "2024-11-28T23:50:49.392562",
+     "duration": 0.002743,
+     "end_time": "2024-11-29T06:49:26.642076",
      "exception": false,
-     "start_time": "2024-11-28T23:50:49.389546",
+     "start_time": "2024-11-29T06:49:26.639333",
      "status": "completed"
     },
     "tags": []
@@ -389,7 +390,7 @@
     },
     {
      "datasetId": 5909723,
-     "sourceId": 10044648,
+     "sourceId": 10047072,
      "sourceType": "datasetVersion"
     }
    ],
@@ -418,14 +419,14 @@
   },
   "papermill": {
    "default_parameters": {},
-   "duration": 13.246549,
-   "end_time": "2024-11-28T23:50:50.219694",
+   "duration": 15.289995,
+   "end_time": "2024-11-29T06:49:27.670587",
    "environment_variables": {},
    "exception": null,
    "input_path": "__notebook__.ipynb",
    "output_path": "__notebook__.ipynb",
    "parameters": {},
-   "start_time": "2024-11-28T23:50:36.973145",
+   "start_time": "2024-11-29T06:49:12.380592",
    "version": "2.6.0"
   }
  },
