Kaggle Notebook | mcts-lightgbm | Version 10

--- a/kaggle/mcts-lightgbm.ipynb
+++ b/kaggle/mcts-lightgbm.ipynb
@@ -3,21 +3,21 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "fada36e7",
+   "id": "fe1daca9",
    "metadata": {
     "_cell_guid": "b1076dfc-b9ad-4769-8c92-a6c4dae69d19",
     "_uuid": "8f2839f25d086af736a60e9eeb907d3b93b6e0e5",
     "execution": {
-     "iopub.execute_input": "2024-11-28T23:52:20.379035Z",
-     "iopub.status.busy": "2024-11-28T23:52:20.378615Z",
-     "iopub.status.idle": "2024-11-28T23:52:24.294268Z",
-     "shell.execute_reply": "2024-11-28T23:52:24.293407Z"
+     "iopub.execute_input": "2024-11-29T06:49:59.849779Z",
+     "iopub.status.busy": "2024-11-29T06:49:59.849400Z",
+     "iopub.status.idle": "2024-11-29T06:50:03.982227Z",
+     "shell.execute_reply": "2024-11-29T06:50:03.980580Z"
     },
     "papermill": {
-     "duration": 3.922415,
-     "end_time": "2024-11-28T23:52:24.296566",
+     "duration": 4.140861,
+     "end_time": "2024-11-29T06:50:03.985162",
      "exception": false,
-     "start_time": "2024-11-28T23:52:20.374151",
+     "start_time": "2024-11-29T06:49:59.844301",
      "status": "completed"
     },
     "tags": []
@@ -51,13 +51,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "850d6f55",
+   "id": "0a14b2d0",
    "metadata": {
     "papermill": {
-     "duration": 0.002244,
-     "end_time": "2024-11-28T23:52:24.301791",
+     "duration": 0.002474,
+     "end_time": "2024-11-29T06:50:03.991142",
      "exception": false,
-     "start_time": "2024-11-28T23:52:24.299547",
+     "start_time": "2024-11-29T06:50:03.988668",
      "status": "completed"
     },
     "tags": []
@@ -70,19 +70,19 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "ded2bb70",
+   "id": "82e0e12a",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-11-28T23:52:24.308214Z",
-     "iopub.status.busy": "2024-11-28T23:52:24.307642Z",
-     "iopub.status.idle": "2024-11-28T23:52:42.318505Z",
-     "shell.execute_reply": "2024-11-28T23:52:42.316977Z"
+     "iopub.execute_input": "2024-11-29T06:50:03.999293Z",
+     "iopub.status.busy": "2024-11-29T06:50:03.998594Z",
+     "iopub.status.idle": "2024-11-29T06:50:11.207193Z",
+     "shell.execute_reply": "2024-11-29T06:50:11.204134Z"
     },
     "papermill": {
-     "duration": 18.016643,
-     "end_time": "2024-11-28T23:52:42.320786",
+     "duration": 7.215285,
+     "end_time": "2024-11-29T06:50:11.209682",
      "exception": false,
-     "start_time": "2024-11-28T23:52:24.304143",
+     "start_time": "2024-11-29T06:50:03.994397",
      "status": "completed"
     },
     "tags": []
@@ -93,9 +93,6 @@
      "output_type": "stream",
      "text": [
       "/opt/conda/lib/python3.10/site-packages/sklearn/base.py:318: UserWarning: Trying to unpickle estimator OrdinalEncoder from version 1.5.2 when using version 1.2.2. This might lead to breaking code or invalid results. Use at your own risk. For more info please refer to:\n",
-      "https://scikit-learn.org/stable/model_persistence.html#security-maintainability-limitations\n",
-      "  warnings.warn(\n",
-      "/opt/conda/lib/python3.10/site-packages/sklearn/base.py:318: UserWarning: Trying to unpickle estimator MinMaxScaler from version 1.5.2 when using version 1.2.2. This might lead to breaking code or invalid results. Use at your own risk. For more info please refer to:\n",
       "https://scikit-learn.org/stable/model_persistence.html#security-maintainability-limitations\n",
       "  warnings.warn(\n"
      ]
@@ -114,7 +111,8 @@
    "source": [
     "# Specify the path where you want to save the serialized function\n",
     "# lightgbm_artifacts_path = '/kaggle/input/mcts-artifacts/lightgbm_predict_uni80.pkl'\n",
-    "lightgbm_artifacts_path = '/kaggle/input/mcts-artifacts/lightgbm_linear_predict_uni95.pkl'\n",
+    "# lightgbm_artifacts_path = '/kaggle/input/mcts-artifacts/lightgbm_linear_predict_uni95.pkl'\n",
+    "lightgbm_artifacts_path = '/kaggle/input/mcts-artifacts/lightgbm_predict_fsv24.pkl'\n",
     "\n",
     "# Load the function from the file\n",
     "with open(lightgbm_artifacts_path, 'rb') as f:\n",
@@ -126,19 +124,19 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "be3e11f4",
+   "id": "cbaa4051",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-11-28T23:52:42.327891Z",
-     "iopub.status.busy": "2024-11-28T23:52:42.327498Z",
-     "iopub.status.idle": "2024-11-28T23:52:42.338172Z",
-     "shell.execute_reply": "2024-11-28T23:52:42.336928Z"
+     "iopub.execute_input": "2024-11-29T06:50:11.218078Z",
+     "iopub.status.busy": "2024-11-29T06:50:11.217623Z",
+     "iopub.status.idle": "2024-11-29T06:50:11.230694Z",
+     "shell.execute_reply": "2024-11-29T06:50:11.229240Z"
     },
     "papermill": {
-     "duration": 0.016693,
-     "end_time": "2024-11-28T23:52:42.340277",
+     "duration": 0.020048,
+     "end_time": "2024-11-29T06:50:11.233244",
      "exception": false,
-     "start_time": "2024-11-28T23:52:42.323584",
+     "start_time": "2024-11-29T06:50:11.213196",
      "status": "completed"
     },
     "tags": []
@@ -148,8 +146,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "len(numerical_cols): 468\n",
-      "len(categorical_cols): 10\n"
+      "len(numerical_cols): 219\n",
+      "len(categorical_cols): 8\n"
      ]
     }
    ],
@@ -222,19 +220,19 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "a4f03e1e",
+   "id": "15bb9058",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-11-28T23:52:42.348131Z",
-     "iopub.status.busy": "2024-11-28T23:52:42.347022Z",
-     "iopub.status.idle": "2024-11-28T23:52:43.022894Z",
-     "shell.execute_reply": "2024-11-28T23:52:43.021860Z"
+     "iopub.execute_input": "2024-11-29T06:50:11.241683Z",
+     "iopub.status.busy": "2024-11-29T06:50:11.241181Z",
+     "iopub.status.idle": "2024-11-29T06:50:11.833805Z",
+     "shell.execute_reply": "2024-11-29T06:50:11.832695Z"
     },
     "papermill": {
-     "duration": 0.681949,
-     "end_time": "2024-11-28T23:52:43.025065",
+     "duration": 0.600198,
+     "end_time": "2024-11-29T06:50:11.836743",
      "exception": false,
-     "start_time": "2024-11-28T23:52:42.343116",
+     "start_time": "2024-11-29T06:50:11.236545",
      "status": "completed"
     },
     "tags": []
@@ -250,7 +248,7 @@
        "  white-space: pre-wrap;\n",
        "}\n",
        "</style>\n",
-       "<small>shape: (3, 2)</small><table border=\"1\" class=\"dataframe\"><thead><tr><th>Id</th><th>utility_agent1</th></tr><tr><td>i64</td><td>f64</td></tr></thead><tbody><tr><td>233234</td><td>0.149463</td></tr><tr><td>233235</td><td>-0.199594</td></tr><tr><td>233236</td><td>0.004744</td></tr></tbody></table></div>"
+       "<small>shape: (3, 2)</small><table border=\"1\" class=\"dataframe\"><thead><tr><th>Id</th><th>utility_agent1</th></tr><tr><td>i64</td><td>f64</td></tr></thead><tbody><tr><td>233234</td><td>0.150888</td></tr><tr><td>233235</td><td>-0.172462</td></tr><tr><td>233236</td><td>-0.039412</td></tr></tbody></table></div>"
       ],
       "text/plain": [
        "shape: (3, 2)\n",
@@ -259,9 +257,9 @@
        "│ ---    ┆ ---            │\n",
        "│ i64    ┆ f64            │\n",
        "╞════════╪════════════════╡\n",
-       "│ 233234 ┆ 0.149463       │\n",
-       "│ 233235 ┆ -0.199594      │\n",
-       "│ 233236 ┆ 0.004744       │\n",
+       "│ 233234 ┆ 0.150888       │\n",
+       "│ 233235 ┆ -0.172462      │\n",
+       "│ 233236 ┆ -0.039412      │\n",
        "└────────┴────────────────┘"
       ]
      },
@@ -279,13 +277,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e7e38f39",
+   "id": "e8462176",
    "metadata": {
     "papermill": {
-     "duration": 0.002677,
-     "end_time": "2024-11-28T23:52:43.030727",
+     "duration": 0.002765,
+     "end_time": "2024-11-29T06:50:11.842896",
      "exception": false,
-     "start_time": "2024-11-28T23:52:43.028050",
+     "start_time": "2024-11-29T06:50:11.840131",
      "status": "completed"
     },
     "tags": []
@@ -298,19 +296,19 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "c3632829",
+   "id": "d13d9a92",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-11-28T23:52:43.037894Z",
-     "iopub.status.busy": "2024-11-28T23:52:43.037488Z",
-     "iopub.status.idle": "2024-11-28T23:52:43.789609Z",
-     "shell.execute_reply": "2024-11-28T23:52:43.788519Z"
+     "iopub.execute_input": "2024-11-29T06:50:11.850766Z",
+     "iopub.status.busy": "2024-11-29T06:50:11.850308Z",
+     "iopub.status.idle": "2024-11-29T06:50:12.351583Z",
+     "shell.execute_reply": "2024-11-29T06:50:12.350276Z"
     },
     "papermill": {
-     "duration": 0.758398,
-     "end_time": "2024-11-28T23:52:43.791953",
+     "duration": 0.508716,
+     "end_time": "2024-11-29T06:50:12.354520",
      "exception": false,
-     "start_time": "2024-11-28T23:52:43.033555",
+     "start_time": "2024-11-29T06:50:11.845804",
      "status": "completed"
     },
     "tags": []
@@ -332,13 +330,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b31089ca",
+   "id": "38c4b6f7",
    "metadata": {
     "papermill": {
-     "duration": 0.002684,
-     "end_time": "2024-11-28T23:52:43.797846",
+     "duration": 0.002773,
+     "end_time": "2024-11-29T06:50:12.360702",
      "exception": false,
-     "start_time": "2024-11-28T23:52:43.795162",
+     "start_time": "2024-11-29T06:50:12.357929",
      "status": "completed"
     },
     "tags": []
@@ -359,7 +357,7 @@
     },
     {
      "datasetId": 5909723,
-     "sourceId": 10044648,
+     "sourceId": 10047072,
      "sourceType": "datasetVersion"
     }
    ],
@@ -388,14 +386,14 @@
   },
   "papermill": {
    "default_parameters": {},
-   "duration": 27.637088,
-   "end_time": "2024-11-28T23:52:45.227593",
+   "duration": 16.807711,
+   "end_time": "2024-11-29T06:50:13.791207",
    "environment_variables": {},
    "exception": null,
    "input_path": "__notebook__.ipynb",
    "output_path": "__notebook__.ipynb",
    "parameters": {},
-   "start_time": "2024-11-28T23:52:17.590505",
+   "start_time": "2024-11-29T06:49:56.983496",
    "version": "2.6.0"
   }
  },
